# Finall-year-project

./: .gitignore  README.md  VERCEL_HOSTING.md  analysis_history.json  app.py  app_auth.py  create_test_image.py  demo.py  demo_output.txt  detector.py  init_db.py  init_mongodb.py  pyproject.toml  requirements.txt  run_dev.bat  run_dev.ps1  serve.py  test_comparison.py  test_full_workflow.py  vercel.json
api/: index.py  requirements.txt
templates/: edit_report.html  index.html  login.html  register.html
