[project]
name = "deep-forensics"
version = "0.1.0"
description = "Deep Forensics - Image Forgery Detection"
dependencies = [
    "flask>=2.3.0",
    "opencv-contrib-python-headless>=4.8.0",
    "scikit-learn==1.5.2",
    "numpy==1.26.4",
    "scipy==1.13.1",
    "Werkzeug>=2.3.0",
    "Pillow>=10.0.0",
    "flask-login>=0.6.0",
    "pymongo>=4.6.0",
    "dnspython>=2.4.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
